welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:28: error: not found: value faireVColor
	for (h<- 0 to 3 ) {faireVColor.GREEN()}
                           ^MethodsPicture:32: error: not found: value faireVColor
	for (h<- 0 to 3 ) {faireVColor.GREEN()}
                           ^